Fix z-index issue on projects container title

--- a/sass/layouts/_card-containers.scss
+++ b/sass/layouts/_card-containers.scss
@@ -20,6 +20,7 @@
     }
     h3 {
         position: absolute;
+        z-index: -1;
         transform: translateY(-2.6rem);
     }
 }
